# retailflow-elt-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
dbt_project/retailflow_dbt/: .gitignore  dbt_project.yml
dbt_project/retailflow_dbt/macros/: clean_is_active.sql
dbt_project/retailflow_dbt/models/: sources.yml
dbt_project/retailflow_dbt/models/marts/: dim_customers.sql  dim_products.sql  dim_stores.sql  fact_orders.sql  mart_customer_sales.sql  mart_product_performance.sql  mart_sales_summary.sql
dbt_project/retailflow_dbt/models/staging/: stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql  stg_stores.sql
dbt_project/retailflow_dbt/snapshots/: order_items_snapshot.sql
ingestion/: requirements.txt
ingestion/database/: connection.py
ingestion/extraction/: extractor.py
ingestion/load/: s3_loader.py
ingestion/logs/: logger.py
ingestion/metadata/: metadata.py
ingestion/pipelines/: customer_pipeline.py  order_item_pipeline.py  order_pipeline.py  product_pipeline.py  store_pipeline.py
ingestion/validation/: validator.py
ingestion_scripts/database/: connection.py
ingestion_scripts/extraction/: extractor.py
ingestion_scripts/load/: s3_loader.py
ingestion_scripts/metadata/: metadata.py
ingestion_scripts/pipelines/: customer_pipeline.py  order_item_pipeline.py  order_pipeline.py  product_pipeline.py  store_pipeline.py
ingestion_scripts/validation/: validate.yml
