[project]
name = "retailflow-elt-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.45",
    "dbt-core>=1.11.12",
    "dbt-postgres>=1.10.2",
    "dbt-snowflake>=1.11.6",
    "pandas>=3.0.3",
    "psycopg2-binary>=2.9.12",
    "pyarrow>=25.0.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "yml>=0.0.1",
]
